upadeted hello project

--- a/tssrc/tsconfig.json
+++ b/tssrc/tsconfig.json
@@ -8,7 +8,8 @@
 
     "files": [
         "DefoldTypeScript/defold.d.ts",
-        "main.ts"
+        "DefoldTypeScript/defold.additional.d.ts",
+        "main.script.ts"
     ],
 
     "luaTarget": "JIT"
